# featmgmt

./: .coverage  .gitignore  .gitmodules  AGENT-COUNCIL.md  AGENT-TALK.md  CLAUDE.md  CONTEXT_ENGINEERING_METHODOLOGY.md  HANDOFF.md  LICENSE  README.md  coverage.xml  pyproject.toml  test-feat-004-validation.sh  test-report-feat-004.md  test_feat003_validation.py  test_feat005_validation.sh  test_results_feat003.md  test_results_feat005.md
.beads/formulas/: ce-stage-5-features.formula.toml  context-engineering.formula.toml
.claude/agents/: bug-processor-agent.md  git-ops-agent.md  retrospective-agent.md  summary-reporter-agent.md  test-runner-agent.md
.claude/skills/: registry.json
claude-agents/gitops/: infra-executor-agent.md  (+2 more)
docs/: ARCHITECTURE.md  CONTEXT_ENGINEERING_FORMULAS.md  CUSTOMIZATION.md  SETUP.md  UPDATING.md
feature-management/: .agent-config.json  .featmgmt-config.json  .gitignore  OVERPROMPT.md  README.md  UPDATE_LOG.md  agent_actions.md
scripts/: compare-with-template.sh  init-project.sh  migrate-featmgmt-to-beads.sh  sync-agents.sh  update-project.sh
skills/: README.md
subagent-patterns/: README.md  bug-processor.md  git-history.md  infra-executor.md  retrospective.md  scan-prioritize.md  summary-reporter.md  task-scanner.md  test-runner.md  verification.md  work-item-creation.md
templates/: .agent-config.json.template  OVERPROMPT-codex-gitops.md  OVERPROMPT-codex-standard.md  OVERPROMPT-gitops.md  OVERPROMPT-standard.md  README.md.template  actions.md.template  inquiries.md.template
tests/: test_feat_004_validation.sh
(+265 files in other folders)
