[tool.poetry]
name = "featmgmt-skills"
version = "2.0.0-alpha"
description = "Experimental Skills-based workflow automation for feature management"
authors = ["Brendan Becker <brendan@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
